# AnduinOS-Packages

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  DEV_GUIDE.md  README.md  apkg-sdk-upstream-url-arch.md  nuget.config
anduinos-swapcontrol-gtk/: .gitignore  Cargo.toml  build.sh  compile-locales.sh  swapcontrol-gtk.aosproj  translate.py
anduinos-swapcontrol-gtk/data/: com.anduinos.swapcontrol.desktop  com.anduinos.swapcontrol.policy  helper
anduinos-swapcontrol-gtk/po/: ar_SA.po  da_DK.po  de_DE.po  el_GR.po  en.po  en_GB.po  en_US.po  es_ES.po  fi_FI.po  fr_FR.po  hi_IN.po  id_ID.po  it_IT.po  ja_JP.po  ko_KR.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  swapcontrol-gtk.pot  th_TH.po  tr_TR.po  uk_UA.po  vi_VN.po  zh_CN.po  zh_HK.po  zh_TW.po
anduinos-swapcontrol-gtk/src/: application.rs  config.rs  i18n.rs  main.rs  progress_dialog.rs  utils.rs  window.rs
anduinos-swapcontrol-gtk/src/swap/: exec.rs  hibernation.rs  mod.rs  persist.rs  (+7 more)
anduinos-ufwall-gtk/: Cargo.toml  build.sh  compile-locales.sh  test_channel.rs  ufwall-gtk.aosproj
anduinos-ufwall-gtk/data/: com.anduinos.ufwall.desktop  com.anduinos.ufwall.policy
anduinos-ufwall-gtk/po/: ar_SA.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  en_US.po  es_ES.po  fi_FI.po  fr_FR.po  hi_IN.po  id_ID.po  it_IT.po  ja_JP.po  ko_KR.po  messages.mo  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  ufwall-gtk.pot  uk_UA.po  vi_VN.po  zh_CN.po  zh_HK.po  zh_TW.po
anduinos-ufwall-gtk/src/: application.rs  config.rs  i18n.rs  main.rs  window.rs
(+458 files in other folders)
