[package]
name = "ufwall-gtk"
version = "2.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A modern GTK4/Libadwaita frontend for UFW (Uncomplicated Firewall)"
authors = ["AnduinOS Team <anduin@aiursoft.com>"]

[dependencies]
gtk = { package = "gtk4", version = "0.11" }
adw = { package = "libadwaita", version = "0.9", features = ["v1_6"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
notify = "7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-channel = "2.3.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
